# bioscons

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  DEVELOPING.rst  MANIFEST.in  README.html  README.rst  SConstruct  __init__.py  bioscons.html  builders.py  distribute_setup.py  genindex.html  increment_version.py  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  utils.py
_modules/: bioscons.html  index.html
_modules/bioscons/: builders.html  fast.html  fileutils.html  infernal.html  pplacer.html  r_lang.html  raxml.html  refpkg.html  slurm.html  utils.html
_sources/: bioscons.txt  index.txt
bioscons/: __init__.py  builders.py  fast.py  fileutils.py  infernal.py  pplacer.py  r_lang.py  raxml.py  refpkg.py  setup.py  slurm.py  sweave.py  utils.py
dev/: ghpages-publish.sh  mkenvs.sh  mkvenv.sh  run_travis.sh  set_tag.sh
docs/: Makefile  bioscons.rst  conf.py  index.rst
examples/: README.rest  SConstruct.drop_seq
examples/RAxML_subalign/: README.rst  SConstruct  remove_one.py
examples/slurm_examples/: slurm_queue.py  slurm_queue_all.py
html/: genindex.html  searchindex.js
html/_modules/: index.html
html/_sources/: index.txt
src/: utils.py
src/bioscons/: __init__.py  fast.py  fileutils.py  slurm.py  utils.py
src/data/: README.txt
template/: SConscript  SConstruct  settings.conf  setup.ini
tests/: SConstruct  test_fileutils.py  test_slurm.py
tests/infernal/: SConstruct
tests/pplacer/: SConstruct
tests/raxml_nothreads/: SConstruct
(+23 files in other folders)
